--- a/api/package.json
+++ b/api/package.json
@@ -22,11 +22,15 @@
   "dependencies": {
     "@nestjs/common": "^10.4.3",
     "@nestjs/core": "^10.4.3",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
     "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "luxon": "^3.5.0",
+    "mongodb": "^5.9.2",
     "pg": "^8.13.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
