--- a/api/package.json
+++ b/api/package.json
@@ -24,9 +24,12 @@
     "@nestjs/core": "^10.4.3",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.4.3",
     "@nestjs/typeorm": "^10.0.2",
+    "@nestjs/websockets": "^10.4.3",
     "bcrypt": "^5.1.1",
     "class-validator": "^0.14.1",
+    "mysql2": "^3.11.3",
     "pg": "^8.13.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
