--- a/api/package.json
+++ b/api/package.json
@@ -33,6 +33,8 @@
     "class-validator": "^0.14.1",
     "luxon": "^3.5.0",
     "mongodb": "^5.9.2",
+    "mysql2": "^3.11.3",
+    "nodemailer": "^6.9.15",
     "pg": "^8.13.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
